--- a/OWON-GUI/OWON-GUI/MainWindow.axaml
+++ b/OWON-GUI/OWON-GUI/MainWindow.axaml
@@ -298,9 +298,12 @@
         
         <Button  Grid.Row="1" Grid.Column="0" Content="t1"   Width="50" x:Name="t1" Click="t1_Click" />
         <Button Grid.Row="1" Grid.Column="1"  Content="t2"   Width="50" x:Name="t2" Click="t2_Click"/>
-        <Button Grid.Row="1" Grid.Column="2"  Content="t3"   Width="50" x:Name="t3" Click="t3_Click" />
+        <Button Grid.Row="1" Grid.Column="2"  Content="{Binding OwonSerialCom.NumRawSpeedData}"   Width="50" x:Name="t3" Click="t3_ClickAsync" />
         <Button Grid.Row="1" Grid.Column="3"  Content="t4"   Width="50" x:Name="t4" Click="t4_Click" />
-        <TextBox x:Name="demoText" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3" Height="150" />
+        <TextBox x:Name="demoText" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Height="150" />
+        <TextBox AcceptsReturn="True"
+                 TextWrapping="Wrap"
+                 x:Name="demoText1" Grid.Row="2" Grid.Column="3"  Height="150" />
 
     </Grid>
 </Window>
