--- a/OWON-GUI/OWON-GUI/MainWindow.axaml
+++ b/OWON-GUI/OWON-GUI/MainWindow.axaml
@@ -96,7 +96,7 @@
         
 
 
-        <Style Selector="Path#svgLockStatus">
+        <!--<Style Selector="Path#svgLockStatus">
              <Setter Property="VerticalAlignment" Value="Center"/>
              <Setter Property="HorizontalAlignment" Value="Stretch"/>
 
@@ -108,8 +108,48 @@
                 <Setter Property="Fill" Value="Green"/>
                 <Setter Property="Data" Value="M12 0a4 4 0 0 1 4 4v2.5h-1V4a3 3 0 1 0-6 0v2h.5A2.5 2.5 0 0 1 12 8.5v5A2.5 2.5 0 0 1 9.5 16h-7A2.5 2.5 0 0 1 0 13.5v-5A2.5 2.5 0 0 1 2.5 6H8V4a4 4 0 0 1 4-4"/>
             </Style>
-        </Style>
+        </Style>-->
 
+         
+         <Style Selector="Button#FastReadingStartStop">
+			<Setter Property="Width" Value="32"/>
+			<Setter Property="Height" Value="32"/>
+
+
+           
+             <Style Selector="^ > Viewbox">
+				<Setter Property="Width" Value="25"/>
+			    <Setter Property="Height" Value="25"/>
+
+
+                 <Style Selector="^ > Path">
+                    <Setter Property="Width" Value="16"/>
+			        <Setter Property="Height" Value="16"/>
+                 </Style>
+
+             </Style>
+
+
+
+
+
+             <Style Selector="^[Tag=True] > Viewbox > Path">
+                <Setter Property="Fill" Value="Red"/>
+				<Setter Property="Data" Value="M5 3.5h6A1.5 1.5 0 0 1 12.5 5v6a1.5 1.5 0 0 1-1.5 1.5H5A1.5 1.5 0 0 1 3.5 11V5A1.5 1.5 0 0 1 5 3.5" />
+            </Style>
+
+             <Style Selector="^[Tag=False] > Viewbox > Path">
+                <Setter Property="Fill" Value="Green"/>
+				<Setter Property="Data" Value="m11.596 8.697-6.363 3.692c-.54.313-1.233-.066-1.233-.697V4.308c0-.63.692-1.01 1.233-.696l6.363 3.692a.802.802 0 0 1 0 1.393" />
+            </Style>
+             
+
+
+         </Style>
+
+
+
+     
         
 
 
@@ -118,6 +158,8 @@
     <Window.Resources>
         <converters:isLockedStatusBoolToButtonContentConverter x:Key="isLockedStatusBoolToButtonContentConverter"/>
         <converters:OperatingModeEnumToStringConverter x:Key="OperatingModeEnumToStringConverter"/>
+        <converters:FastReadTypeEnumToStringConverter x:Key="FastReadTypeEnumToStringConverter"/>
+
     </Window.Resources>
     
     <Grid>
@@ -285,6 +327,30 @@
 				  <Label Content="{Binding OwonSerialCom.OperatingMode,  Converter={StaticResource OperatingModeEnumToStringConverter}}" 
                         />
              </StackPanel>
+             <Border Height="1" Background="Gray" Margin="0,10" />       
+                  
+             <Label Content="Fast read data"  />
+
+             <StackPanel Orientation="Horizontal" >
+				<ComboBox x:Name="FastReadDataTypeCombo" Width="120" ItemsSource="{Binding OwonSerialCom.FastReadTypeEnumValues}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Converter={StaticResource FastReadTypeEnumToStringConverter}}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+                 <Button x:Name="FastReadingStartStop"  Tag="{Binding OwonSerialCom.IsFastReadingServiceRunning}" Click="FastReadingStartStop_Click">
+                      <Viewbox Stretch="Uniform">
+                          <Path ></Path>
+					 </Viewbox>
+                     
+                 </Button>
+
+                  
+
+             </StackPanel>
+
+            
               
 
          </StackPanel>
